FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_image REQUIRED)
FIND_PACKAGE(SDL_mixer REQUIRED)
FIND_PACKAGE(SDL_net REQUIRED)
FIND_PACKAGE(CURL REQUIRED)
FIND_PACKAGE(LibXml2 REQUIRED)
FIND_PACKAGE(PhysFS REQUIRED)
FIND_PACKAGE(PNG REQUIRED)

SET(FLAGS "-DPACKAGE_VERSION=\\\"${VERSION}\\\"")
SET(FLAGS "${FLAGS} -DAETHYRA_DATADIR=\\\"${PKG_DATADIR}/\\\"")

SET(GUICHAN_COMPONENTS "SDL")
IF (WITH_OPENGL)
    SET(GUICHAN_COMPONENTS ${GUICHAN_COMPONENTS} "OpenGL")
ENDIF (WITH_OPENGL)
FIND_PACKAGE(Guichan REQUIRED ${GUICHAN_COMPONENTS})

IF (WITH_OPENGL)
    FIND_PACKAGE(OpenGL REQUIRED)
    INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
    SET(FLAGS "${FLAGS} -DUSE_OPENGL")
ENDIF (WITH_OPENGL)

INCLUDE_DIRECTORIES(
    ${CURRENT_SOURCE_DIR}
    ${SDL_INCLUDE_DIR}
    ${SDLIMAGE_INCLUDE_DIR}
    ${SDLMIXER_INCLUDE_DIR}
    ${SDLNET_INCLUDE_DIR}
    ${PNG_INCLUDE_DIR}
    ${PHYSFS_INCLUDE_DIR}
    ${CURL_INCLUDE_DIR}
    ${LIBXML2_INCLUDE_DIR}
    ${GUICHAN_INCLUDE_DIR}
    )

# Fix some stuff that gets not hidden by mainline modules
MARK_AS_ADVANCED(PHYSFS_INCLUDE_DIR)
MARK_AS_ADVANCED(PHYSFS_LIBRARY)
MARK_AS_ADVANCED(SDLIMAGE_INCLUDE_DIR)
MARK_AS_ADVANCED(SDLIMAGE_LIBRARY)
MARK_AS_ADVANCED(SDLMAIN_LIBRARY)
MARK_AS_ADVANCED(SDLMIXER_INCLUDE_DIR)
MARK_AS_ADVANCED(SDLMIXER_LIBRARY)
MARK_AS_ADVANCED(SDLNET_INCLUDE_DIR)
MARK_AS_ADVANCED(SDLNET_LIBRARY)
MARK_AS_ADVANCED(SDL_INCLUDE_DIR)
MARK_AS_ADVANCED(SDL_LIBRARY)

SET(SRCS
    bindings/guichan/graphics.cpp
    bindings/guichan/graphics.h
    bindings/guichan/guichanfwd.h
    bindings/guichan/gui.cpp
    bindings/guichan/gui.h
    bindings/guichan/keyboardconfig.cpp
    bindings/guichan/keyboardconfig.h
    bindings/guichan/layout.cpp
    bindings/guichan/layout.h
    bindings/guichan/layouthelper.cpp
    bindings/guichan/layouthelper.h
    bindings/guichan/palette.cpp
    bindings/guichan/palette.h
    bindings/guichan/skin.cpp
    bindings/guichan/skin.h
    bindings/guichan/text.cpp
    bindings/guichan/text.h
    bindings/guichan/textmanager.cpp
    bindings/guichan/textmanager.h
    bindings/guichan/textrenderer.h
    bindings/guichan/truetypefont.cpp
    bindings/guichan/truetypefont.h
    bindings/guichan/handlers/focushandler.cpp
    bindings/guichan/handlers/focushandler.h
    bindings/guichan/handlers/itemlinkhandler.cpp
    bindings/guichan/handlers/itemlinkhandler.h
    bindings/guichan/handlers/linkhandler.h
    bindings/guichan/models/ignorechoiceslistmodel.h
    bindings/guichan/models/keylistmodel.h
    bindings/guichan/models/modelistmodel.cpp
    bindings/guichan/models/modelistmodel.h
    bindings/guichan/models/playerrelationlistmodel.h
    bindings/guichan/models/playertablemodel.cpp
    bindings/guichan/models/playertablemodel.h
    bindings/guichan/models/shoplistmodel.cpp
    bindings/guichan/models/shoplistmodel.h
    bindings/guichan/models/skilltablemodel.cpp
    bindings/guichan/models/skilltablemodel.h
    bindings/guichan/models/statictablemodel.cpp
    bindings/guichan/models/statictablemodel.h
    bindings/guichan/models/tablemodel.cpp
    bindings/guichan/models/tablemodel.h
    bindings/guichan/opengl/openglgraphics.cpp
    bindings/guichan/opengl/openglgraphics.h
    bindings/guichan/sdl/sdlgraphics.cpp
    bindings/guichan/sdl/sdlgraphics.h
    bindings/guichan/sdl/sdlinput.cpp
    bindings/guichan/sdl/sdlinput.h
    bindings/guichan/widgets/browserbox.cpp
    bindings/guichan/widgets/browserbox.h
    bindings/guichan/widgets/button.cpp
    bindings/guichan/widgets/button.h
    bindings/guichan/widgets/chatinput.cpp
    bindings/guichan/widgets/chatinput.h
    bindings/guichan/widgets/checkbox.cpp
    bindings/guichan/widgets/checkbox.h
    bindings/guichan/widgets/container.cpp
    bindings/guichan/widgets/container.h
    bindings/guichan/widgets/dropdown.cpp
    bindings/guichan/widgets/dropdown.h
    bindings/guichan/widgets/emotecontainer.cpp
    bindings/guichan/widgets/emotecontainer.h
    bindings/guichan/widgets/emoteshortcutcontainer.cpp
    bindings/guichan/widgets/emoteshortcutcontainer.h
    bindings/guichan/widgets/imagebutton.cpp
    bindings/guichan/widgets/imagebutton.h
    bindings/guichan/widgets/inttextfield.h
    bindings/guichan/widgets/inttextfield.cpp
    bindings/guichan/widgets/itemcontainer.cpp
    bindings/guichan/widgets/itemcontainer.h
    bindings/guichan/widgets/itemshortcutcontainer.cpp
    bindings/guichan/widgets/itemshortcutcontainer.h
    bindings/guichan/widgets/label.cpp
    bindings/guichan/widgets/label.h
    bindings/guichan/widgets/listbox.cpp
    bindings/guichan/widgets/listbox.h
    bindings/guichan/widgets/passwordfield.cpp
    bindings/guichan/widgets/passwordfield.h
    bindings/guichan/widgets/playerbox.cpp
    bindings/guichan/widgets/playerbox.h
    bindings/guichan/widgets/popup.cpp
    bindings/guichan/widgets/popup.h
    bindings/guichan/widgets/progressbar.cpp
    bindings/guichan/widgets/progressbar.h
    bindings/guichan/widgets/radiobutton.cpp
    bindings/guichan/widgets/radiobutton.h
    bindings/guichan/widgets/resizegrip.cpp
    bindings/guichan/widgets/resizegrip.h
    bindings/guichan/widgets/scrollarea.cpp
    bindings/guichan/widgets/scrollarea.h
    bindings/guichan/widgets/setuptabcontainer.cpp
    bindings/guichan/widgets/setuptabcontainer.h
    bindings/guichan/widgets/shoplistbox.cpp
    bindings/guichan/widgets/shoplistbox.h
    bindings/guichan/widgets/shortcutcontainer.cpp
    bindings/guichan/widgets/shortcutcontainer.h
    bindings/guichan/widgets/slider.cpp
    bindings/guichan/widgets/slider.h
    bindings/guichan/widgets/tab.cpp
    bindings/guichan/widgets/tab.h
    bindings/guichan/widgets/tabbedarea.cpp
    bindings/guichan/widgets/tabbedarea.h
    bindings/guichan/widgets/table.cpp
    bindings/guichan/widgets/table.h
    bindings/guichan/widgets/textbox.cpp
    bindings/guichan/widgets/textbox.h
    bindings/guichan/widgets/textfield.cpp
    bindings/guichan/widgets/textfield.h
    bindings/guichan/widgets/textpreview.cpp
    bindings/guichan/widgets/textpreview.h
    bindings/guichan/widgets/window.cpp
    bindings/guichan/widgets/window.h
    bindings/guichan/widgets/windowcontainer.cpp
    bindings/guichan/widgets/windowcontainer.h
    bindings/sdl/joystick.cpp
    bindings/sdl/joystick.h
    bindings/sdl/sound.cpp
    bindings/sdl/sound.h
    gui/buy.cpp
    gui/buy.h
    gui/buysell.cpp
    gui/buysell.h
    gui/charselect.cpp
    gui/charselect.h
    gui/charserver.cpp
    gui/charserver.h
    gui/chat.cpp
    gui/chat.h
    gui/confirmdialog.cpp
    gui/confirmdialog.h
    gui/debugwindow.cpp
    gui/debugwindow.h
    gui/emotewindow.cpp
    gui/emotewindow.h
    gui/equipmentwindow.cpp
    gui/equipmentwindow.h
    gui/help.cpp
    gui/help.h
    gui/inventorywindow.cpp
    gui/inventorywindow.h
    gui/itempopup.cpp
    gui/itempopup.h
    gui/itemamount.cpp
    gui/itemamount.h
    gui/login.cpp
    gui/login.h
    gui/menuwindow.cpp
    gui/menuwindow.h
    gui/minimap.cpp
    gui/minimap.h
    gui/ministatus.cpp
    gui/ministatus.h
    gui/npcintegerdialog.cpp
    gui/npcintegerdialog.h
    gui/npclistdialog.cpp
    gui/npclistdialog.h
    gui/npcstringdialog.cpp
    gui/npcstringdialog.h
    gui/npctext.cpp
    gui/npctext.h
    gui/okdialog.cpp
    gui/okdialog.h
    gui/popupmenu.cpp
    gui/popupmenu.h
    gui/recorder.cpp
    gui/recorder.h
    gui/register.cpp
    gui/register.h
    gui/sell.cpp
    gui/sell.h
    gui/setup.cpp
    gui/setup.h
    gui/setup_audio.cpp
    gui/setup_audio.h
    gui/setup_colors.cpp
    gui/setup_colors.h
    gui/setup_input.cpp
    gui/setup_input.h
    gui/setup_players.cpp
    gui/setup_players.h
    gui/setup_video.cpp
    gui/setup_video.h
    gui/shortcutwindow.cpp
    gui/shortcutwindow.h
    gui/skill.cpp
    gui/skill.h
    gui/speechbubble.cpp
    gui/speechbubble.h
    gui/status.cpp
    gui/status.h
    gui/storagewindow.cpp
    gui/storagewindow.h
    gui/trade.cpp
    gui/trade.h
    gui/updatewindow.h
    gui/updatewindow.cpp
    gui/viewport.cpp
    gui/viewport.h
    net/beinghandler.h
    net/beinghandler.cpp
    net/buysellhandler.h
    net/buysellhandler.cpp
    net/charserverhandler.h
    net/charserverhandler.cpp
    net/chathandler.h
    net/chathandler.cpp
    net/equipmenthandler.h
    net/equipmenthandler.cpp
    net/inventoryhandler.h
    net/inventoryhandler.cpp
    net/itemhandler.h
    net/itemhandler.cpp
    net/loginhandler.h
    net/loginhandler.cpp
    net/maploginhandler.cpp
    net/maploginhandler.h
    net/messagehandler.cpp
    net/messagehandler.h
    net/messagein.cpp
    net/messagein.h
    net/messageout.cpp
    net/messageout.h
    net/network.cpp
    net/network.h
    net/npchandler.cpp
    net/npchandler.h
    net/partyhandler.cpp
    net/partyhandler.h
    net/playerhandler.cpp
    net/playerhandler.h
    net/protocol.h
    net/skillhandler.cpp
    net/skillhandler.h
    net/tradehandler.cpp
    net/tradehandler.h
    resources/action.cpp
    resources/action.h
    resources/ambientoverlay.cpp
    resources/ambientoverlay.h
    resources/beingmanager.cpp
    resources/beingmanager.h
    resources/animation.cpp
    resources/animation.h
    resources/dye.cpp
    resources/dye.h
    resources/flooritemmanager.cpp
    resources/flooritemmanager.h
    resources/image.cpp
    resources/image.h
    resources/imageloader.cpp
    resources/imageloader.h
    resources/imageset.h
    resources/imageset.cpp
    resources/imagewriter.cpp
    resources/imagewriter.h
    resources/mapreader.cpp
    resources/mapreader.h
    resources/music.cpp
    resources/music.h
    resources/resource.cpp
    resources/resource.h
    resources/resourcemanager.cpp
    resources/resourcemanager.h
    resources/simpleanimation.cpp
    resources/simpleanimation.h
    resources/soundeffect.cpp
    resources/soundeffect.h
    resources/spritedef.cpp
    resources/spritedef.h
    resources/wallpaper.cpp
    resources/wallpaper.h
    resources/db/colordb.cpp
    resources/db/colordb.h
    resources/db/effectdb.cpp
    resources/db/effectdb.h
    resources/db/emotedb.cpp
    resources/db/emotedb.h
    resources/db/itemdb.cpp
    resources/db/itemdb.h
    resources/db/iteminfo.h
    resources/db/iteminfo.cpp
    resources/db/monsterdb.cpp
    resources/db/monsterdb.h
    resources/db/monsterinfo.cpp
    resources/db/monsterinfo.h
    resources/db/npcdb.cpp
    resources/db/npcdb.h
    resources/db/skilldb.cpp
    resources/db/skilldb.h
    resources/particle/animationparticle.cpp
    resources/particle/animationparticle.h
    resources/particle/imageparticle.cpp
    resources/particle/imageparticle.h
    resources/particle/particle.cpp
    resources/particle/particle.h
    resources/particle/particlecontainer.cpp
    resources/particle/particlecontainer.h
    resources/particle/particleemitter.cpp
    resources/particle/particleemitter.h
    resources/particle/particleemitterprop.h
    resources/particle/rotationalparticle.cpp
    resources/particle/rotationalparticle.h
    resources/particle/textparticle.cpp
    resources/particle/textparticle.h
    resources/sprite/animatedsprite.cpp
    resources/sprite/animatedsprite.h
    resources/sprite/being.cpp
    resources/sprite/being.h
    resources/sprite/flooritem.cpp
    resources/sprite/flooritem.h
    resources/sprite/localplayer.cpp
    resources/sprite/localplayer.h
    resources/sprite/monster.cpp
    resources/sprite/monster.h
    resources/sprite/npc.cpp
    resources/sprite/npc.h
    resources/sprite/player.cpp
    resources/sprite/player.h
    resources/sprite/sprite.h
    utils/base64.cpp
    utils/base64.h
    utils/dtor.h
    utils/fastsqrt.h
    utils/gettext.h
    utils/lockedarray.h
    utils/stringutils.cpp
    utils/stringutils.h
    utils/mutex.h
    utils/position.cpp
    utils/position.h
    utils/xml.cpp
    utils/xml.h
    utils/vector.cpp
    utils/vector.h
    configlistener.h
    configuration.cpp
    configuration.h
    emoteshortcut.cpp
    emoteshortcut.h
    engine.cpp
    engine.h
    equipment.cpp
    equipment.h
    game.cpp
    game.h
    inventory.cpp
    inventory.h
    item.cpp
    item.h
    itemshortcut.cpp
    itemshortcut.h
    log.cpp
    log.h
    logindata.h
    main.cpp
    main.h
    map.cpp
    map.h
    party.cpp
    party.h
    playerrelations.cpp
    playerrelations.h
    properties.h
    serverinfo.h
    shopitem.cpp
    shopitem.h
    tileset.h
    )

ADD_EXECUTABLE(aethyra ${SRCS})

TARGET_LINK_LIBRARIES(aethyra
    ${SDL_LIBRARY}
    ${SDLIMAGE_LIBRARY}
    ${SDLMIXER_LIBRARY}
    ${SDLNET_LIBRARY}
    ${PNG_LIBRARIES}
    ${PHYSFS_LIBRARY}
    ${CURL_LIBRARIES}
    ${LIBXML2_LIBRARIES}
    ${GUICHAN_LIBRARIES}
    ${OPENGL_LIBRARIES}
    )

INSTALL(TARGETS aethyra RUNTIME DESTINATION ${PKG_BINDIR})

SET_TARGET_PROPERTIES(aethyra PROPERTIES COMPILE_FLAGS "${FLAGS}")
